--- a/lang/en.txt
+++ b/lang/en.txt
@@ -7723,5 +7723,6 @@ Upload#
 6019 Populate Hotbar#
 6020 Preload Music Files#
 6021 Preloading improves playback performance, but increases system memory usage. (Applied next game launch)#
+6022 Show Player Callouts#
 
 6100 end#
