* fix accident class name deletion

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -2895,16 +2895,16 @@ last of your magic is drained!#
 2549 DEPRECATED#
 
 # 2550 - 2560 new class names
-2550 DEPRECATED#
-2551 DEPRECATED#
-2552 DEPRECATED#
-2553 DEPRECATED#
-2554 DEPRECATED#
-2555 DEPRECATED#
-2556 DEPRECATED#
-2557 DEPRECATED#
-2558 DEPRECATED#
-2559 DEPRECATED#
+2550 sexton#
+2551 ninja#
+2552 monk#
+2553 blank#
+2554 blank#
+2555 blank#
+2556 blank#
+2557 blank#
+2558 blank#
+2559 blank#
 # 2560 - 2570 new class descriptions
 2560 DEPRECATED#
 2561 DEPRECATED#
