* fix sex toggle on char selected displaying DEPRECATED * adjust incubus sex toggle lang entry

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -4202,7 +4202,7 @@ any gyrobot findings.#
 3824 DEPRECATED#
 3825 DEPRECATED#
 3826 DEPRECATED#
-3827 DEPRECATED#
+3827 Incubus#
 3828 DEPRECATED#
 3829 DEPRECATED#
 3830 DEPRECATED#
