speaker mode can be configured, is saved to config fixed 3D audio being reversed front-to-back
Signed-off-by: SheridanR <sheridan.rathbun@gmail.com>

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6241,4 +6241,17 @@ Filter#
 Filters#
 6080 Depth#
 
-6100 end#
+# Audio speaker mode settings
+6140 Configuration#
+6141 Default#
+6142 Raw#
+6143 Mono#
+6144 Stereo#
+6145 Quad#
+6146 Surround Sound#
+6147 5.1 Surround Sound#
+6148 7.1 Surround Sound#
+6149 7.1.4 Surround Sound#
+6150 The desired speaker configuration.#
+
+6200 end#
