--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6276,4 +6276,84 @@ to load your matching save file.#
 6105 Your shot catches %s unaware!#
 6106 / 100 XP#
 6107 XP#
-6108 END#
+6108 You do not yet have any 
+entries on this leaderboard 
+to find nearby scores.#
+6109 Note: This challenge ends soon!
+Finish before the expiry time
+to make it to the leaderboards!#
+6110 One-Shot
+Challenge#
+6111 Unlimited
+Challenge#
+6112 Event
+Challenge#
+6113 Checking connectivity#
+6114 Unable to load challenges.
+Please try again later.#
+6115 Unable to load challenge.
+Please try again later.#
+6116 Event update in progress.
+Please try again in a few minutes.#
+6117 Challenges are currently
+unavailable.#
+6118 Next
+Event:#
+6119 SEED EVENTS#
+6120 One chance to make the
+leaderboards! Local play only.#
+6121 Tackle weekly set dungeons!
+For solo and multiplayer.#
+6122 Variety event twists each weekend!
+For solo and multiplayer.#
+6123 Savegames do not match.
+LID mismatch.#
+6124 Joined lobby is not hosting
+your selected challenge.#
+6125 You have already submitted an attempt
+for this challenge!
+
+You may replay this challenge, though your
+scored leaderboard rank will not change.
+
+Would you still like to replay this challenge?#
+6126 Myths & Outcasts DLC is required 
+to replay this challenge!
+
+
+#
+6127 Legends & Pariahs DLC is required
+to replay this challenge!
+
+
+#
+6128 Leaderboards Updated!#
+6129 Unable to join lobby.
+Chosen challenge does not
+match host challenge.#
+6130 Unable to join lobby.
+Joining challenges is
+not supported.#
+6131 Seed events require mods
+to be unloaded before starting.#
+6132 Lobby requires mods to be
+unloaded before joining.#
+6133 Savefile requires mods to be
+unloaded before loading.#
+6134 
+New rank achieved for the
+%s
+leaderboards!#
+6135 Changing class is not
+allowed in this challenge!#
+6136 Changing race is not
+allowed in this challenge!#
+6137 ACHIEVEMENTS DISABLED
+(CHALLENGE EVENT)#
+6138 ACHIEVEMENTS DISABLED (CHALLENGE EVENT)#
+6139 Challenge Event!#
+6151 No scores found with current filter.
+Try different leaderboard filters
+to see more results.#
+
+6200 END#
