* only spawn seed notification on play game menu * add net packet for everyone dead to submit hiscores

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6392,7 +6392,7 @@ your One-Shot score attempt.#
 submit it as your One-Shot score.#
 6169 New Seed Events Available!#
 6170 
-Visit the Play Game menu
-to view new Seed Events.#
+Visit the Seed Events menu
+to participate.#
 
 6200 END#
