* lang update * compendium section update

--- a/lang/compendium_lang/contents_codex.json
+++ b/lang/compendium_lang/contents_codex.json
@@ -7,8 +7,24 @@
 		{"RACE & ALIGNMENT": "races"},
 		{"EXPERIENCE POINTS (XP)": "xp"},
 		{"LEVELING UP": "leveling up"},
-		{"    STATS": "-"},
 		{"STATS & METASTATS": "stats metastats"},
+		{"SKILLS": "skills"},
+		{"    ACTIONS": "-"},
+		{"MELEE ATTACKS": "melee"},
+		{"CRITICAL STRIKES": "crits"},
+		{"FLANKING STRIKES": "flanking"},
+		{"BACKSTABBING": "backstabs"},
+		{"SNEAKING": "sneaking"},
+		{"LEGENDARY STRIKES": "legendary strikes"},
+		{"BLOCKING": "blocking"},
+		{"STRAFE & BACKPEDAL": "strafing"},
+		{"MEMORIZED CASTING": "memorized"},
+		{"SPELLBOOK CASTING": "spellbook casting"},
+		{"MISSILE ATTACKS": "missiles"},
+		{"THROWN ATTACKS": "thrown"},
+		{"ITEM DEGRADATION": "equipment degradation"},
+		{"WANTED STATUS": "wanted"},
+		{"    STATS & METASTATS": "-"},
 		{"STRENGTH (STR)": "str"},
 		{"DEXTERITY (DEX)": "dex"},
 		{"CONSTITUTION (CON)": "con"},
@@ -22,22 +38,7 @@
 		{"MAGIC POWER (PWR)": "pwr"},
 		{"REGENERATION (RGN)": "rgn"},
 		{"WEIGHT (WGT)": "wgt"},
-		{"    MECHANICS": "-"},
-		{"MELEE ATTACKS": "melee"},
-		{"CRITICAL STRIKES": "crits"},
-		{"FLANKING STRIKES": "flanking"},
-		{"BACKSTABBING": "backstabs"},
-		{"SNEAKING": "sneaking"},
-		{"LEGENDARY STRIKES": "legendary strikes"},
-		{"BLOCKING": "blocking"},
-		{"STRAFE & BACKPEDAL": "strafing"},
-		{"MEMORIZED CASTING": "memorized"},
-		{"SPELLBOOK CASTING": "spellbook casting"},
-		{"MISSILE ATTACKS": "missiles"},
-		{"THROWN ATTACKS": "thrown"},
-		{"ITEM DURABILITY": "equipment degradation"},
 		{"    SKILLS": "-"},
-		{"SKILLS": "skills"},
 		{"SWORD SKILL": "sword skill"},
 		{"AXE SKILL": "axe skill"},
 		{"POLEARM SKILL": "polearm skill"},
@@ -52,7 +53,6 @@
 		{"SWIMMING SKILL": "swimming skill"},
 		{"LEADERSHIP SKILL": "leadership skill"},
 		{"TRADING SKILL": "trading skill"},
-		{"WANTED STATUS": "wanted"},
 		{"ALCHEMY SKILL": "alchemy skill"},
 		{"TINKERING SKILL": "tinkering skill"}
 	],
