--- a/lang/compendium_lang/contents_items.json
+++ b/lang/compendium_lang/contents_items.json
@@ -1,17 +1,8 @@
 {
 	"version": 1,
 	"contents": [
-		{"    EQUIPMENT": "-"},
-		{"TORCHES & LANTERNS": "torch and lantern"},
-		{"SHIELDS": "shields"},
-		{"CRYSTAL SHARD": "crystal shard"},
-		{"MIRRORS": "mirrors"},
-		{"HATS & HOODS": "hats & hoods"},
-		{"CROWNS & HEADDRESSES": "crowns & headdresses"},
-		{"FACE ACCESSORIES": "face accessories"},
-		{"MASKS & VISORS": "masks & visors"},
-		{"CLOAKS & CLOTHING": "cloaks & clothing"},
-		{"BACKPACKS": "backpacks"},
+		{"    ARMOR": "-"},
+		{"SHIELDS": "shields"},		
 		{"LEATHER ARMOR": "leather armor"},
 		{"IRON ARMOR": "iron armor"},
 		{"STEEL ARMOR": "steel armor"},
@@ -21,7 +12,14 @@
 		{"DJINNI'S BRACE": "djinnis brace"},
 		{"DRAGON'S MAIL": "dragons mail"},
 		{"WRAITH'S GOWN": "wraiths gown"},
-		{"    MELEE WEAPONRY": "-"},
+		{"    CLOTHING": "-"},
+		{"HATS & HOODS": "hats & hoods"},
+		{"CROWNS & HEADDRESSES": "crowns & headdresses"},
+		{"FACE ACCESSORIES": "face accessories"},
+		{"MASKS & VISORS": "masks & visors"},
+		{"CLOAKS & SHIRTS": "cloaks & clothing"},
+		{"BACKPACKS": "backpacks"},
+		{"    MELEE WEAPONS": "-"},
 		{"SWORDS": "swords"},
 		{"AXES": "axes"},
 		{"MACES": "maces"},
@@ -32,10 +30,7 @@
 		{"GUNGNIR": "gungnir"},
 		{"FIST WEAPONS": "fist weapons"},
 		{"WHIP": "whip"},
-		{"    RANGED WEAPONRY": "-"},
-		{"TOMAHAWKS & DAGGERS": "tomahawks & daggers"},
-		{"CHAKRAMS & SHURIKENS": "chakrams and shurikens"},
-		{"BOOMERANG": "boomerang"},
+		{"    MISSILE WEAPONS": "-"},
 		{"SLINGSHOT": "slingshot"},
 		{"BOWS": "bows"},
 		{"CROSSBOW": "crossbow"},
@@ -45,27 +40,36 @@
 		{"SILVER & PIERCING AMMO": "silver and piercing ammo"},
 		{"FIRE & HUNTING AMMO": "fire and hunting ammo"},
 		{"CRYSTAL AMMO": "crystal ammo"},
-		{"    GEMSTONES": "-"},
+		{"    THROWING WEAPONS": "-"},
+		{"TOMAHAWKS & DAGGERS": "tomahawks & daggers"},
+		{"CHAKRAMS & SHURIKENS": "chakrams and shurikens"},
+		{"BOOMERANG": "boomerang"},
+		{"    CRYSTALS": "-"},		
 		{"ROCKS & GEMS": "rocks & gems"},
+		{"CRYSTAL SHARD": "crystal shard"},
+		{"MYSTIC ORB": "mystic orb"},		
 		{"    FOOD": "-"},
-		{"WATER": "water"},
 		{"MORSELS": "cheese and apples"},
 		{"CREAM PIE": "cream pie"},
 		{"TOMALLEY": "tomalley"},
 		{"MEALS": "meat, fish, and bread"},
 		{"TIN & TIN OPENER": "tin and tin opener"},
 		{"BLOOD VIALS": "blood vials"},
-		{"    POTIONS": "-"},
-		{"BOOZE": "booze"},
+		{"    POTIONS & DRINKS": "-"},
+		{"WATER": "water"},
 		{"EMPTY BOTTLE": "empty bottle"},
 		{"DEFENSIVE POTIONS": "defensive potions"},
 		{"OFFENSIVE POTIONS": "offensive potions"},
 		{"ALEMBIC": "alembic"},
 		{"    TOOLS": "-"},
+		{"TORCHES & LANTERNS": "torch and lantern"},
+		{"MIRRORS": "mirrors"},		
+		{"TOWEL": "towel"},
 		{"MINING PICK": "mining pick"},
 		{"TINKERING KIT": "tinkering kit"},
 		{"LOCKPICK": "lockpick"},
 		{"SKELETON KEY": "skeleton key"},
+		{"    GADGETS": "-"},		
 		{"BEARTRAP": "beartrap"},
 		{"NOISEMAKER": "noisemaker"},
 		{"DUMMYBOT": "dummybot"},
@@ -74,9 +78,7 @@
 		{"TINKERED TRAPS": "tinkered traps"},
 		{"TELEPORTATION TRAP": "teleportation trap"},
 		{"    OTHER": "-"},
-		{"TOWEL": "towel"},
 		{"MAIL & LORE BOOKS": "mail & lore books"},
-		{"MYSTIC ORB": "mystic orb"},
 		{"DEATH BOX": "death box"}
 	],
 	"contents_alphabetical": [
@@ -87,11 +89,10 @@
 		{"BEARTRAP": "beartrap"},
 		{"BLOOD VIALS": "blood vials"},
 		{"BOOMERANG": "boomerang"},
-		{"BOOZE": "booze"},
 		{"BOWS": "bows"},
 		{"CHAKRAMS & SHURIKENS": "chakrams and shurikens"},
 		{"CHEESE & APPLES": "cheese and apples"},
-		{"CLOAKS & CLOTHING": "cloaks & clothing"},
+		{"CLOAKS & SHIRTS": "cloaks & clothing"},
 		{"CREAM PIE": "cream pie"},
 		{"CROSSBOW": "crossbow"},
 		{"CROWNS & HEADDRESSES": "crowns & headdresses"},
