--- a/lang/compendium_lang/contents_magic.json
+++ b/lang/compendium_lang/contents_magic.json
@@ -1,19 +1,24 @@
 {
 	"version": 1,
 	"contents": [
+		{"    MAGIC ITEMS": "-"},
+		{"MAGICSTAFFS": "magicstaffs"},
 		{"ENCHANTED RINGS": "enchanted rings"},
 		{"ENCHANTED AMULETS": "enchanted amulets"},
-		{"MAGICSTAFFS": "magicstaffs"},
+		{"    ARCANA": "-"},
 		{"SCROLLS": "scrolls"},
 		{"ENCHANTED FEATHER": "enchanted feather"},
+		{"    SORCERY": "-"},
 		{"EVOCATION": "evocation"},
 		{"CONTRAVENTION": "contravention"},
 		{"KINESIS": "kinesis"},
 		{"TEMULTURGY": "temulturgy"},
+		{"    THAUMATURGY": "-"},
 		{"BLESSINGS": "blessings"},
 		{"DIVINATIONS": "divinations"},
 		{"MIRACULOUS FEATS": "miraculous feats"},
 		{"MEDITATIONS": "meditations"},
+		{"    MYSTICISM": "-"},
 		{"SARKOMANCY": "sarkomancy"},
 		{"PSIANIMUS": "psianimus"},
 		{"DAIMONIA": "daimonia"},
