--- a/lang/compendium_lang/contents_monsters.json
+++ b/lang/compendium_lang/contents_monsters.json
@@ -1,58 +1,64 @@
 {
 	"version": 1,
 	"contents": [
+		{"    HUMANOIDS": "-"},
 		{"HUMANS": "human"},
+		{"GNOME": "gnome"},
+		{"GOBLIN": "goblin"},
+		{"THE POTATO KING": "potato king"},
+		{"SHOPKEEPER": "shopkeeper"},
+		{"MYSTERIOUS MERCHANT": "mysterious shop"},
+		{"    BEASTS": "-"},
 		{"RAT": "rat"},
-		{"ALGERNON": "algernon"},
-		{"SKELETON": "skeleton"},
-		{"FUNNY BONES": "funny bones"},
 		{"SPIDER": "spider"},
 		{"SHELOB": "shelob"},
 		{"TROLL": "troll"},
 		{"THUMPUS": "thumpus"},
-		{"SUCCUBUS": "succubus"},
-		{"LILITH": "lilith"},
-		{"SUCCUBUS CONSORTS": "bram succubi"},
-		{"SLIMES": "slime"},
+		{"ALGERNON": "algernon"},
+		{"SCORPION": "scorpion"},
+		{"SKRABBLAG": "skrabblag"},
+		{"SCARAB": "scarab"},
+		{"XYGGI": "xyggi"},
+		{"COCKATRICE": "cockatrice"},
+		{"MINOTAUR": "minotaur"},		
+		{"    BEASTFOLK": "-"},
+		{"INSECTOID": "insectoid"},
+		{"KOBOLD": "kobold"},
+		{"GOATMAN": "goatman"},
+		{"GHARBAD": "gharbad"},
+		{"    UNDEAD": "-"},
+		{"GHOST": "ghost"},		
+		{"SKELETON": "skeleton"},
+		{"FUNNY BONES": "funny bones"},
 		{"GHOULS": "ghoul"},
 		{"CORAL GRIMES": "coral grimes"},
 		{"ENSLAVED GHOULS": "enslaved ghoul"},
-		{"GNOME": "gnome"},
-		{"GOBLIN": "goblin"},
-		{"THE POTATO KING": "potato king"},
-		{"SCORPION": "scorpion"},
-		{"SKRABBLAG": "skrabblag"},
-		{"INSECTOID": "insectoid"},
-		{"SCARAB": "scarab"},
-		{"XYGGI": "xyggi"},
-		{"AUTOMATON": "automaton"},
-		{"DEMON": "demon"},
-		{"DEU DE'BREAU": "deudebreau"},
-		{"INCUBUS": "incubus"},
-		{"IMP": "imp"},
 		{"VAMPIRE": "vampire"},
 		{"BRAM KINDLY": "bram kindly"},
-		{"KOBOLD": "kobold"},
-		{"CRYSTAL GOLEM": "crystalgolem"},
-		{"COCKATRICE": "cockatrice"},
-		{"GOATMAN": "goatman"},
-		{"GHARBAD": "gharbad"},
 		{"SHADOW": "shadow"},
 		{"ARTEMISIA": "artemisia"},
 		{"BARATHEON": "baratheon"},
-		{"SHOPKEEPER": "shopkeeper"},
-		{"MYSTERIOUS MERCHANT": "mysterious shop"},
-		{"MINOTAUR": "minotaur"},
 		{"BARON HERX": "lich"},
 		{"BAPHOMET": "devil"},
 		{"ERUDYCE": "lichice"},
 		{"ORPHEUS": "lichfire"},
-		{"MIMIC": "mimic"},
+		{"    DEMONOIDS": "-"},
+		{"SUCCUBUS": "succubus"},
+		{"LILITH": "lilith"},
+		{"SUCCUBUS CONSORTS": "bram succubi"},
+		{"INCUBUS": "incubus"},
+		{"IMP": "imp"},
+		{"DEMON": "demon"},
+		{"DEU DE'BREAU": "deudebreau"},
+		{"    CONSTRUCTS": "-"},		
+		{"AUTOMATON": "automaton"},
 		{"SENTRYBOT": "sentrybot"},
 		{"SPELLBOT": "spellbot"},
-		{"GYROBOT": "gyrobot"},
 		{"DUMMYBOT": "dummybot"},
-		{"GHOST": "ghost"}
+		{"    ELEMENTALS": "-"},		
+		{"SLIMES": "slime"},
+		{"CRYSTAL GOLEM": "crystalgolem"},
+		{"MIMIC": "mimic"}
 	],
 	"contents_alphabetical": [
 		{"ALGERNON": "algernon"},
@@ -77,7 +83,6 @@
 		{"GNOME": "gnome"},
 		{"GOATMAN": "goatman"},
 		{"GOBLIN": "goblin"},
-		{"GYROBOT": "gyrobot"},
 		{"HUMANS": "human"},
 		{"IMP": "imp"},
 		{"INCUBUS": "incubus"},
