--- a/lang/compendium_lang/contents_world.json
+++ b/lang/compendium_lang/contents_world.json
@@ -1,37 +1,39 @@
 {
 	"version": 1,
 	"contents": [
-		{"    AREAS": "-"},
+		{"    FURNISHINGS": "-"},
+		{"GATE": "portcullis"},
+		{"LEVER": "lever"},
+		{"DOOR": "door"},
+		{"MURKY WATER": "murky water"},
+		{"LAVA": "lava"},
+		{"PITS": "pits"},
+		{"BREAKABLE BARRIERS": "breakable barriers"},
+		{"    LOCATIONS": "-"},
 		{"MINEHEAD": "minehead"},
 		{"HALL OF TRIALS": "hall of trials"},
-		{"MINES": "mines"},
-		{"SHOP": "shop"},
-		{"GNOMISH MINES": "gnomish mines"},
-		{"MINETOWN": "minetown"},
-		{"    DUNGEONS": "-"},
-		{"    SECRET AREAS": "-"},
-		{"TRANSITION FLOOR": "transition floor"},
-		{"SWAMPS": "swamps"},
-		{"TEMPLE": "temple"},
-		{"HAUNTED CASTLE": "haunted castle"},
-		{"LABYRINTH": "labyrinth"},
-		{"SOKOBAN": "sokoban"},
-		{"MINOTAUR MAZE": "minotaur maze"},
-		{"RUINS": "ruins"},
-		{"MYSTIC LIBRARY": "mystic library"},
 		{"LICH'S BASTION": "herx lair"},
-		{"UNDERWORLD": "underworld"},
 		{"THE MOLTEN THRONE": "molten throne"},		
-		{"HAMLET": "hamlet"},
-		{"HELL": "hell"},
-		{"CRYSTAL CAVES": "crystal caves"},
-		{"COCKATRICE LAIR": "cockatrice lair"},
-		{"ARCANE CITADEL": "arcane citadel"},
-		{"BRAM'S CASTLE": "brams castle"},
+		{"HAMLET": "hamlet"},		
+		{"TRANSITION FLOOR": "transition floor"},
 		{"CITADEL SANCTUM": "citadel sanctum"},
-		
-		{"    ENVIRONMENT": "-"},
-
+		{"    DUNGEONS": "-"},
+		{"MINES": "mines"},		
+		{"SWAMPS": "swamps"},
+		{"LABYRINTH": "labyrinth"},
+		{"RUINS": "ruins"},		
+		{"UNDERWORLD": "underworld"},
+		{"HELL": "hell"},		
+		{"CRYSTAL CAVES": "crystal caves"},
+		{"ARCANE CITADEL": "arcane citadel"},		
+		{"    STATIONS": "-"},
+		{"SHOP": "shop"},		
+		{"SINK": "sink"},
+		{"FOUNTAIN": "fountain"},
+		{"CHEST": "chest"},
+		{"GRAVESTONE": "gravestone"},
+		{"OBELISK": "obelisk"},		
+		{"    TRAPS": "-"},
 		{"BOULDER TRAP": "boulder trap"},
 		{"ARROW TRAP": "arrow trap"},
 		{"SPIKE TRAP": "spike trap"},
@@ -39,22 +41,17 @@
 		{"SUMMONING TRAP": "summoning trap"},
 		{"BRIMSTONE BOULDER": "brimstone boulder"},
 		{"CEILING TRAP": "ceiling trap"},
-		{"MURKY WATER": "murky water"},
-		{"LAVA": "lava"},
-		{"PITS": "pits"},
-		{"BREAKABLE BARRIERS": "breakable barriers"},
-		
-		{"    OBJECTS": "-"},
-		{"GATE": "portcullis"},
-		{"LEVER": "lever"},
-		{"DOOR": "door"},
-		{"SINK": "sink"},
-		{"FOUNTAIN": "fountain"},
-		{"CHEST": "chest"},
-		{"GRAVESTONE": "gravestone"},
-		{"OBELISK": "obelisk"},
-		
-		{"    GUILDS": "-"},
+		{"    SECRET PLACES": "-"},
+		{"GNOMISH MINES": "gnomish mines"},
+		{"MINETOWN": "minetown"},
+		{"TEMPLE": "temple"},
+		{"HAUNTED CASTLE": "haunted castle"},
+		{"SOKOBAN": "sokoban"},
+		{"MINOTAUR MAZE": "minotaur maze"},
+		{"MYSTIC LIBRARY": "mystic library"},		
+		{"COCKATRICE LAIR": "cockatrice lair"},
+		{"BRAM'S CASTLE": "brams castle"},		
+		{"    GUILD LORE": "-"},
 		{"MERCHANTS' GUILD": "merchants guild"},
 		{"MAGICIANS' GUILD": "magicians guild"},
 		{"HUNTERS' GUILD": "hunters guild"},
