* lang update, monsters fix some sections, amplify magic spellbook name update

--- a/lang/compendium_lang/contents_monsters.json
+++ b/lang/compendium_lang/contents_monsters.json
@@ -10,11 +10,11 @@
 		{"MYSTERIOUS MERCHANT": "mysterious shop"},
 		{"    BEASTS": "-"},
 		{"RAT": "rat"},
+		{"ALGERNON": "algernon"},
 		{"SPIDER": "spider"},
 		{"SHELOB": "shelob"},
 		{"TROLL": "troll"},
 		{"THUMPUS": "thumpus"},
-		{"ALGERNON": "algernon"},
 		{"SCORPION": "scorpion"},
 		{"SKRABBLAG": "skrabblag"},
 		{"SCARAB": "scarab"},
@@ -39,10 +39,9 @@
 		{"ARTEMISIA": "artemisia"},
 		{"BARATHEON": "baratheon"},
 		{"BARON HERX": "lich"},
-		{"BAPHOMET": "devil"},
 		{"ERUDYCE": "lichice"},
 		{"ORPHEUS": "lichfire"},
-		{"    DEMONOIDS": "-"},
+		{"    DEMONICS": "-"},
 		{"SUCCUBUS": "succubus"},
 		{"LILITH": "lilith"},
 		{"SUCCUBUS CONSORTS": "bram succubi"},
@@ -50,6 +49,7 @@
 		{"IMP": "imp"},
 		{"DEMON": "demon"},
 		{"DEU DE'BREAU": "deudebreau"},
+		{"BAPHOMET": "devil"},
 		{"    CONSTRUCTS": "-"},		
 		{"AUTOMATON": "automaton"},
 		{"SENTRYBOT": "sentrybot"},
