--- a/lang/en.txt
+++ b/lang/en.txt
@@ -5587,7 +5587,7 @@ Lv%d#
 
 5610 ADVENTURE ARCHIVES#
 5611 ACHIEVEMENTS#
-5612 DUNGEON COMPENDIUM#
+5612 COMPENDIUM#
 5613 HIGHSCORES#
 5614 LEADERBOARDS#
 5615 STORY INTRODUCTION#
@@ -5727,7 +5727,7 @@ I'm kicking you out of this game.#
 5760 Press to Start#
 5761 BACK TO GAME#
 5762 ASSIGN CONTROLLERS#
-5763 DUNGEON COMPENDIUM#
+5763 COMPENDIUM#
 5764 ACHIEVEMENTS#
 5765 SETTINGS#
 5766 END LIFE#
@@ -6415,5 +6415,27 @@ Magic Required: %d (%s)#
 6186 RECIPE CHART#
 6187 USAGE TIPS#
 6188 DETAILS#
+6189 STATS#
+6190 LVL #
+6191 DAMAGE TYPE EFFECTIVENESS:#
+6192 ABILITIES:#
+6193 INVENTORY:#
+6194 LORE POINTS AVAILABLE#
+6195 SORT ALPHABETICAL#
+6196 HIDE UNDISCOVERED#
+6197 ATK:#
+6198 PWR:#
+6199 HP:#
+6200 AC:#
+6201 SPD:#
+6202 HUMANOID#
+6203 BEASTFOLK#
+6204 BEAST#
+6205 UNDEAD#
+6206 DEMONIC#
+6207 CONSTRUCT#
+6208 ELEMENTAL#
+6209 PTS#
+6210 TOTAL COMPLETION#
 
-6200 END#
+6250 END#
