--- a/lang/item_names.json
+++ b/lang/item_names.json
@@ -982,7 +982,7 @@
             "name_unidentified": "shaman mask"
         },
         "spellbook_amplify_magic": {
-            "name_identified": "spellbook of amplify magic",
+            "name_identified": "spellbook of elemental focus",
             "name_unidentified": "spellbook"
         },
         "spellbook_shadow_tag": {
